--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.2",
     "jquery": "^3.7.1",
     "mitt": "^3.0.1",
     "popper.js": "^1.16.1",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.1",
